--- a/HTML Files/index.html
+++ b/HTML Files/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS Files/index.css" />
+    <link rel="stylesheet" href="/index.css" />
 </head>
 <body>
-    <div class="container-menu">
+    <ul class="container-menu">
         <div class="container-menu_links">
-            <a href="/HTML Files/home.html" target="centro">Home</a>
-            <a href="/HTML Files/cadastro_clientes.html" target="centro">C_Clientes</a>
-            <a href="/HTML Files/consulta_produtos.html" target="centro">C_Produtos</a>
-            <a href="/HTML Files/consulta_clientes.html" target="centro">Con_Clientes</a>
-            <a href="/HTML Files/consulta_produtos.html" target="centro">Con_Produtos</a>
+            <li><a href="/HTML Files/home.html" target="centro">Home</a></li>
+            <li><a href="/HTML Files/cadastro_clientes.html" target="centro">C_Clientes</a></li>
+            <li><a href="/HTML Files/consulta_produtos.html" target="centro">C_Produtos</a></li>
+            <li><a href="/HTML Files/consulta_clientes.html" target="centro">Con_Clientes</a></li>
+            <li><a href="/HTML Files/consulta_produtos.html" target="centro">Con_Produtos</a></li>
         </div>
         <a href="/HTML Files/login.html" target="centro"></a>
         <button id="btao">Login</button>
-    </div>
+    </ul>
 
     <iframe src="/HTML Files/login.html" name="centro"></iframe>
 
