Estilização da página de cadastro de clientes, através do CSS.

--- a/HTML Files/cadastro_clientes.html
+++ b/HTML Files/cadastro_clientes.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/CSS Files/cadastro_clientes.css" />
 </head>
 <body>
+    <div class="tittle">
+        <h1>CADASTRO CLIENTES</h1>
+    </div>
+    <hr>
     <div class="container-geral">
         <div class="container">
-            <label for="nome">Nome</label>
+            <label for="nome">Informe seu nome:</label>
             <input id="nome" type="text" placeholder="Informe nome" />
     
-            <label for="email">Email</label>
+            <label for="email">Informe seu email:</label>
             <input id="email" type="email" placeholder="Informe email" />
     
-            <label for="fone">Fone</label>
+            <label for="fone">Informe seu fone:</label>
             <input id="fone" type="text" placeholder="Informe fone" />
         </div>
         <div class="btn">
