--- a/HTML Files/index.html
+++ b/HTML Files/index.html
@@ -12,7 +12,7 @@
         <div class="container-menu_links">
             <li><a href="/HTML Files/home.html" target="centro">Home</a></li>
             <li><a href="/HTML Files/cadastro_clientes.html" target="centro">C_Clientes</a></li>
-            <li><a href="/HTML Files/consulta_produtos.html" target="centro">C_Produtos</a></li>
+            <li><a href="/HTML Files/cadastro_produtos.html" target="centro">C_Produtos</a></li>
             <li><a href="/HTML Files/consulta_clientes.html" target="centro">Con_Clientes</a></li>
             <li><a href="/HTML Files/consulta_produtos.html" target="centro">Con_Produtos</a></li>
         </div>
