Criada a página de consulta de clientes

--- a/HTML Files/index.html
+++ b/HTML Files/index.html
@@ -20,7 +20,7 @@
         <button id="btao">Login</button>
     </ul>
 
-    <iframe src="/HTML Files/login.html" name="centro"></iframe>
+    <iframe src="/HTML Files/consulta_clientes.html" name="centro"></iframe>
 
     <div class="rodape">
         <p>Direitos Autorais reservados @Copyright. Feito por Wendell Thomas Teske</p>
