--- a/HTML Files/consulta_clientes.html
+++ b/HTML Files/consulta_clientes.html
@@ -7,6 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    Olá, mundo!
+    <button onclick="consultar()">Consultar</button>
+    <table>
+        <thead>
+            <th>Id</th>
+            <th>Nome</th>
+            <th>Email</th>
+            <th>Fone</th>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+    <script>
+        function consultar(){
+            fetch('http://localhost:3000/clientes')
+            .then(consul => consul.json())
+            .then(consulta => {
+                var linhas = ""
+                for(let i = 0; i < consulta.length; i++){
+                    linhas += 
+                    `<tr>
+                    <td> ${consulta[i].id} </td>
+                    <td> ${consulta[i].nome} </td>
+                    <td> ${consulta[i].email} </td>
+                    <td> ${consulta[i].fone} </td>
+                    </tr>`
+                }
+                document.getElementsByTagName("tbody")[0].innerHTML = linhas
+            })
+        }
+    </script>
 </body>
 </html>
