--- a/HTML Files/consulta_produtos.html
+++ b/HTML Files/consulta_produtos.html
@@ -5,21 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/consulta_produtos.css" />
 </head>
 <body>
     <h1>CONSULTAR PRODUTOS</h1>
-    <button onclick="consultar()">Consultar</button>
-    <table>
-        <thead>
-            <th>Id</th>
-            <th>Nome</th>
-            <th>Preço</th>
-            <th>Quantidade</th>
-        </thead>
-        <tbody>
+    <h2></h2>
+    <div class="all">
+        <div class="btn">
+            <button onclick="consultar()">Consultar</button>
+        </div>
+        <table>
+            <thead>
+                <th>Id</th>
+                <th>Nome</th>
+                <th>Preço</th>
+                <th>Quantidade</th>
+            </thead>
+            <tbody>
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
     <script>
         function consultar() {
             fetch('http://localhost:3000/produtos')
